--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap');
+
 * {
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'Noto Sans JP',
+  sans-serif;
+  font-weight: 300;
 }
 
 header {
   background-color:teal;
   color: white;
-  height: 5rem;
+  height: 6rem;
   padding: 1rem;
 }
 
 header h1 {
-  font-size: 2.5rem;
+  font-size: 2.8rem;
+  font-weight: 400;
   margin: 0;
+  line-height: 4rem;
 }
 
+h2 {
+  font-weight: 400;
+  font-size: 1.8rem;
+}
 
+h3 {
+  font-weight: 400;
+}
+
+li {
+  
+}
